--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url("https://images.unsplash.com/photo-1547471080-7cc2caa01a7e?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=900&ixid=MnwxfDB8MXxyYW5kb218MHx8bGFuZHNjYXBlfHx8fHx8MTY5MjcwODk1NA&ixlib=rb-4.0.3&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1600");
+  background-image: url("https://source.unsplash.com/1600x900/?landscape");
 }
 
 .caixa-maior{
@@ -19,6 +19,8 @@ body {
   opacity: 0.8;
   border-radius: 25px;
   padding: 25px;
+  width: 95%;
+  max-width: 450px;
 
 }
 
@@ -27,8 +29,54 @@ body {
   outline: none;
   padding: 10px;
   border-radius: 25px;
-  font-size: 15px;
+  font-size: 18px;
   background-color:#7c7c7c2b ;
   color:#ffff;
-  width: calc(100%-100px);
+  width: calc(100% - 70px);
+}
+
+.botao-busca{
+border: none;
+outline: none;
+padding:10px;
+border-radius:50px;
+background-color:#7c7c7c2b;
+cursor: pointer;
+float: right;
+}
+
+.img-busca{
+  width: 20px;
+}
+
+.caixa-media{
+  margin-top: 30px;
+}
+.cidade{
+  color:#fff;
+  font-size: 28px;
+  font-weight:300;
+}
+
+.temp{
+  font-size: 20px;
+  color: #fff;
+  margin-top: 20px;
+}
+
+.caixa-menor{
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+
+}
+
+.texto-previsao{
+  color: #fff;
+  margin-left: 20px; /*para distanciar da nuvem*/
+}
+
+.umidade{
+  color:#fff;
+  margin-top: 20px;
 }
